# DICOM_Visualisation

./: .gitignore  .gitignore~  LICENSE.txt  README  index.html  params.json
.metadata/.plugins/org.eclipse.cdt.core/: CTvisualisation.language.settings.xml  language.settings.xml  shareddefaults.xml
CTvisualisation/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  displayFunc_inline.h~  glErrorCheck.h~  glErrorCheck_inline.h~  global.cxx  global.h  histogramKeyboardFunc.cxx  histogramMouseFunc.cxx  menu.cxx  openGLStatus.h~  segmentationMethods.cxx  segmentationMethods.h  visualisation.cxx  visualisation.cxx~
CTvisualisation/cmake/Modules/: FindMathGL.cmake  FindMathGL.cmake~
CTvisualisation/headers/: CMakeLists.txt  glErrorCheck_inline.h  global.h  histogramDrawFunc.h  histogramMouseFunc.h  importDicomFile.h  menu.h  openGLStatus.h  rescaleVolume.h  segmentationMethods.h  viewSegmentedData.h
CTvisualisation/src/: CMakeLists.txt  CMakeLists.txt~  global.cxx  histogramKeyboardFunc.cxx  histogramMouseFunc.cxx  menu.cxx  segmentationMethods.cxx  viewSegmentedData.cxx  visualisation.cxx
CTvisualisation/src/Histogram_Methods/: CMakeLists.txt  GenerateHistogramFunc.cxx  HistogramDrawFunc.cxx  HistogramKeyboardFunc.cxx  HistogramMouseFunc.cxx
CTvisualisation/src/ITK_Methods/: CMakeLists.txt  ImportDicomSeries.cxx  RescaleVolume.cxx
CTvisualisation/src/Menus/: CMakeLists.txt  Menu.cxx
CTvisualisation/src/Segmentation_Methods/: CMakeLists.txt  ConfidenceConnectedSegmentation.cxx  ConnectedThresholdSegmentation.cxx  ThresholdSegmentation.cxx
(+32 files in other folders)
